# iele-semantics

./: .gitignore  .gitmodules  CNAME  Design.md  Dockerfile  Gas-Model.md  Gas.md  INSTALL.md  Jenkinsfile  KRYPTO.ml  LICENSE  Makefile  README.md  analysis.md  assemble-iele-test  blockchaintest  check-iele  data.md  default.nix  ethereum.md  evm.md  gas.md  generate-report.py  iele-binary.md  iele-coverage.md  iele-gas-summary.md  iele-gas.md  iele-node.md  iele-syntax.md  iele-testing.md  iele.md  index.html  kast-json.py  kiele  kiele-coverage.py  kiele-generate-report.py  kore-json.py  krypto.md  midnightmock.json  pyielerunner  (+9 more)
.build/rvk/: analysis.k  data.k  ethereum.k  evm.k  iele.k  krypto.k
.build/uiuck/: data.k  ethereum.k  evm.k
.github/workflows/: release.yml  test.yml  update.yml
Design/: index.html
INSTALL/: index.html
assets/css/: index.css
assets/js/: index.js
benchmark/: Sha3.iele  sha3.sol
compiler/: README.md  compiler.cabal  index.html
compiler/app/: Main.hs
compiler/src/: IeleAssembler.hs  IeleDesugar.hs  IeleInstructions.hs  IeleParser.hs  IeleParserImplementation.hs  IelePrint.hs  IeleTypes.hs
compiler/test/: TestParser.hs
data/: index.html
iele/: index.html
iele-assemble/: LICENSE  README.md  default.nix  iele-assemble.cabal  index.html  shell.nix  stack.yaml
iele-assemble/app/: Main.hs
iele-assemble/src/: IeleDesugar.hs  IeleInstructions.hs  IeleParser.hs  IeleParserImplementation.hs  IelePrint.hs  IeleTHUtil.hs  IeleTypes.hs
iele-assemble/test/: TestParser.hs
iele-binary/: index.html
iele-coverage/: index.html
iele-examples/: README.md  erc20.iele  example.iele  factorial.iele  forwarder.iele  forwardingWallet-copycreate.iele  forwardingWallet.iele  index.html  simpleOpenAuction.iele  sum.iele
iele-gas/: index.html
iele-gas-summary/: index.html
iele-node/: index.html
iele-semantics-plugin/: KRYPTO.ml  MANTIS.ml  META  caching.ml  caching.mli  threadLocal.mli  world.ml  world.mli
iele-semantics-plugin/proto/: msg.proto
iele-syntax/: example.iele  iele-syntax.k  index.html
iele-testing/: index.html
iele-vm/: ieleNetworkServer.ml  ieleTestClient.ml  ieleVM.ml  ieleVM.mli
nix/: k.lock.json  kiele.nix  libff.nix  rematerialize.sh  sources.json
package/: test-package.sh
package/debian/: Dockerfile  Dockerfile.test  build-package.sh  changelog  control  control.focal  postinst  rules  test-package.sh
package/docker/: Dockerfile
plugin/: caching.ml  world.ml
plugin/plugin/: MANTIS.ml  META  caching.mli  threadLocal.ml  world.ml  world.mli
plugin/vm/: VM.ml  ieleTestClient.ml  vmNetworkServer.ml
proofs/: hkg.md  sum-to-n.md  token-buggy-spec.md
proto/: blockchain.cpp  world.cpp  world.h
proto/proto/: msg.proto
pyiele/: __init__.py  __main__.py  blackbox.py  config.py  fetchFunctionData.py  kieleCoverage.py  rlp.py  rlpencoder.py  rpc.py  testrunner.py  transactionGeneration.py  utils.py
syntax-highlightings/emacs/: README.md  iele-mode.el
syntax-highlightings/vim/: README.md  iele.vim
tests/: bad-packet-2  failing.expected  failing.haskell  node-test.sh  short-list  slow.haskell  split-test.py
tests/evm-to-iele/: .gitignore  conversion.ml  conversion.mli  evm-test-to-iele  evm.ml  evm.mli  iele.ml  iele.mli  ieleUtil.ml  ieleUtil.mli  main.ml
tests/gas/: .gitignore  binary.iele  binary.iele.json  br.iele  br.iele.json  call.iele  call.iele.json  expmod.iele  expmod.iele.json  load.iele  load.iele.json  localcall.iele  localcall.iele.json  makehex.sh  makepow.sh  makerand.sh  maketest.sh  mem.iele  mem.iele.json  memcell.iele  memcell.iele.json  precompiled.iele  precompiled.iele.json  ret.iele  ret.iele.json  sha.iele  sha.iele.json  unary.iele  unary.iele.json
tests/gas-analysis/: sumTo10.evm.out
tests/iele/: failing.haskell
tests/proofs/: sum-to-n-spec.k
tests/templates/: output-normal.txt  output-vmtests.txt
vm/: ieleApi.ml  ieleApi.mli  ieleApiClient.ml  ieleClientUtils.ml  ieleNetworkServer.ml  ieleVM.ml  ieleVmTest.ml
vm/c/: main.cpp  (+2 more)
web/: build-html.js  package-lock.json  package.json
well-formedness/: index.html
wiki/: Home.md
(+313 files in other folders)
