name:                compiler
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/compiler#readme
license:             OtherLicense
license-file:        LICENSE
author:              Virgil Serbanuta
maintainer:          virgil.serbanuta@runtimeverification.com
copyright:           2017 Runtime Verification
category:            Program Transformation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IeleParser
                     , IeleDesugar
                     , IelePrint
                     , IeleTypes
                     , IeleInstructions
                     , IeleAssembler
                     , IeleParserImplementation
  other-modules:       IeleTHUtil
  build-depends:       base >= 4.7 && < 5
                     , parsec >=3.1 && <3.2
                     , containers
                     , lens
                     , bifunctors
                     , validation
                     , cereal
                     , bytestring
                     , pretty
                     , sandi
                     , template-haskell
  default-language:    Haskell2010

executable iele-assemble
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , compiler
                     , parsec >=3.1 && <3.2
                     , bytestring
                     , sandi
  default-language:    Haskell2010

test-suite compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestParser.hs
  build-depends:       base
                     , compiler
                     , parsec >=3.1 && <3.2
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/runtimeverification/iele-semantics
